--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,8 @@ gradio_cache/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+val_videos
+videos
+smpl/*.npz
+smpl/*.pkl
